--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -5,51 +5,51 @@
 
   <main >
     <div class="container wow fadeIn">
-      <h2 class="my-5 h2 text-center">Checkout form</h2>
+      <h2 class="my-5 h2 text-center">Formulario de pago</h2>
       <div class="row">
         <div class="col-md-8 mb-4">
           <div class="card">
             <form method="POST" class="card-body">
               {% csrf_token %}
 
-              <h3>Shipping address</h3>
+              <h3>Dirección de envío</h3>
 
               <div class='hideable_shipping_form'>
 
                 <div class="md-form mb-5">
                   <input type='text' placeholder='1234 Main St' id='shipping_address' name='shipping_address' class='form-control' />
-                  <label for="shipping_address" class="">Address</label>
+                  <label for="shipping_address" class="">Dirección</label>
                 </div>
 
                 <div class="md-form mb-5">
                   <input type='text' placeholder='Apartment or suite' id='shipping_address2' name='shipping_address2' class='form-control' />
-                  <label for="shipping_address2" class="">Address 2 (optional)</label>
+                  <label for="shipping_address2" class="">Dirección 2 (opcional)</label>
                 </div>
 
                 <div class="row">
                   <div class="col-lg-4 col-md-12 mb-4">
-                    <label for="country">Country</label>
+                    <label for="country">País</label>
                     {{ form.shipping_country }}
                     <div class="invalid-feedback">
-                      Please select a valid country.
+                      Por favor elija un pais valido.
                     </div>
                   </div>
                   <div class="col-lg-4 col-md-6 mb-4">
                     <label for="shipping_zip">Zip</label>
                     <input type='text' placeholder='Zip code' id='shipping_zip' name='shipping_zip' class='form-control' />
                     <div class="invalid-feedback">
-                      Zip code required.
+                      Código postal requerido.
                     </div>
                   </div>
                 </div>
 
                 <div class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input" name="same_billing_address" id="same_billing_address">
-                  <label class="custom-control-label" for="same_billing_address">Billing address is the same as my shipping address</label>
+                  <label class="custom-control-label" for="same_billing_address">La dirección de facturación es la misma que mi dirección de envío</label>
                 </div>
                 <div class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input" name="set_default_shipping" id="set_default_shipping">
-                  <label class="custom-control-label" for="set_default_shipping">Save as default shipping address</label>
+                  <label class="custom-control-label" for="set_default_shipping">Guardar como dirección de envío predeterminada</label>
                 </div>
 
               </div>
@@ -57,31 +57,31 @@
               {% if default_shipping_address %}
               <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" name="use_default_shipping" id="use_default_shipping">
-                <label class="custom-control-label" for="use_default_shipping">Use default shipping address: {{ default_shipping_address.street_address|truncatechars:10 }}</label>
+                <label class="custom-control-label" for="use_default_shipping">Usar dirección de envío predeterminada: {{ default_shipping_address.street_address|truncatechars:10 }}</label>
               </div>
               {% endif %}
 
               <hr>
 
-              <h3>Billing address</h3>
+              <h3>Dirección de Envio</h3>
 
               <div class='hideable_billing_form'>
                 <div class="md-form mb-5">
                   <input type='text' placeholder='1234 Main St' id='billing_address' name='billing_address' class='form-control' />
-                  <label for="billing_address" class="">Address</label>
+                  <label for="billing_address" class="">Dirección</label>
                 </div>
 
                 <div class="md-form mb-5">
                   <input type='text' placeholder='Apartment or suite' id='billing_address2' name='billing_address2' class='form-control' />
-                  <label for="billing_address2" class="">Address 2 (optional)</label>
+                  <label for="billing_address2" class="">Dirección 2 (opcional)</label>
                 </div>
 
                 <div class="row">
                   <div class="col-lg-4 col-md-12 mb-4">
-                    <label for="country">Country</label>
+                    <label for="country">País</label>
                     {{ form.billing_country }}
                     <div class="invalid-feedback">
-                      Please select a valid country.
+                      Seleccione un país válido.
                     </div>
                   </div>
 
@@ -89,7 +89,7 @@
                     <label for="billing_zip">Zip</label>
                     <input type='text' placeholder='Zip code' id='billing_zip' name='billing_zip' class='form-control' />
                     <div class="invalid-feedback">
-                      Zip code required.
+                      Código postal requerido.
                     </div>
                   </div>
 
@@ -97,7 +97,7 @@
 
                 <div class="custom-control custom-checkbox">
                   <input type="checkbox" class="custom-control-input" name="set_default_billing" id="set_default_billing">
-                  <label class="custom-control-label" for="set_default_billing">Save as default billing address</label>
+                  <label class="custom-control-label" for="set_default_billing">Guardar como dirección de facturación predeterminada</label>
                 </div>
 
               </div>
@@ -105,12 +105,12 @@
               {% if default_billing_address %}
               <div class="custom-control custom-checkbox">
                 <input type="checkbox" class="custom-control-input" name="use_default_billing" id="use_default_billing">
-                <label class="custom-control-label" for="use_default_billing">Use default billing address: {{ default_billing_address.street_address|truncatechars:10 }}</label>
+                <label class="custom-control-label" for="use_default_billing">Usar dirección de facturación predeterminada: {{ default_billing_address.street_address|truncatechars:10 }}</label>
               </div>
               {% endif %}
               <hr>
 
-              <h3>Payment option</h3>
+              <h3>Opcion de pago</h3>
 
               <div class="d-block my-3">
                 {% for value, name in form.fields.payment_option.choices %}
@@ -122,7 +122,7 @@
               </div>
 
               <hr class="mb-4">
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+              <button class="btn btn-primary btn-lg btn-block" type="submit">Continuar a la comprobación</button>
 
             </form>
 
