--- a/templates/footer.html
+++ b/templates/footer.html
@@ -22,7 +22,7 @@
     <!--Copyright-->
     <div class="footer-copyright py-3">
       © 2023 Copyright: Todos los derechos reservados
-      <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> ElectroShop.com </a>
+      <a href="/" target="_blank"> ElectroShop.com </a>
       <br>
       <p>Machala - Ecuador</p>
     </div>
