--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
                 <h5>
                   <strong>
                     <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
-                      <span class="badge badge-pill {{ item.get_label_display }}-color">NEW</span>
+                      <span class="badge badge-pill {{ item.get_label_display }}-color">NUEVO</span>
                     </a>
                   </strong>
                 </h5>
@@ -65,14 +65,14 @@
           <li class="page-item">
             <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
               <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
+              <span class="sr-only">Previo</span>
             </a>
           </li>
           {% endif %}
 
           <li class="page-item active">
             <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}
-              <span class="sr-only">(current)</span>
+              <span class="sr-only">(actual)</span>
             </a>
           </li>
 
@@ -80,7 +80,7 @@
           <li class="page-item">
             <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
+              <span class="sr-only">Próximo</span>
             </a>
           </li>
           {% endif %}
