--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -5,15 +5,15 @@
     <div class="container">
 
     <div class="table-responsive text-nowrap">
-    <h2>Order Summary</h2>
+    <h2>Resumen del pedido</h2>
     <table class="table">
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Item title</th>
-            <th scope="col">Price</th>
-            <th scope="col">Quantity</th>
-            <th scope="col">Total Item Price</th>
+            <th scope="col">Título del artículo</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Precio total del artículo</th>
         </tr>
         </thead>
         <tbody>
@@ -62,6 +62,7 @@
         </tr>
         <tr>
             <td colspan="5">
+            <a class='btn btn-success float-right ml-2' href='/send_message/' target="_blank">Consultar disponibilidad por WhatsApp</a>
             <a class='btn btn-warning float-right ml-2' href='/checkout/'>Pasar por la caja</a>
             <a class='btn btn-primary float-right' href='/'>Seguir comprando</a>
             </td>
