--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,28 +1,32 @@
 {% load cart_template_tags %}
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
-    <div class="container">
+  <div class="container">
 
-      <!-- Brand -->
-      <a class="navbar-brand waves-effect" href="/">
-        <strong class="blue-text">ElecTroShop-Commerce</strong>
-      </a>
+    <!-- Brand -->
+    <a class="navbar-brand waves-effect" href="/">
+      <strong class="blue-text">ElecTroShop-Commerce</strong>
+    </a>
 
-      <!-- Collapse -->
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <!-- Collapse -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <div style="position: relative; justify-content: right;">
-        <div style="position: relative; top: 0; right: 0;">
-          <form class="form-inline">
-            <div class="md-form my-0 w-100">
-              <input class="form-control mr-sm-2 w-100" type="text" placeholder="Buscar" aria-label="Search">
-            </div>
+    <div style="position: relative; justify-content: right;">
+      <div style="position: relative; top: 0; right: 0;">
+        <form class="form-inline">
+          <div class="md-form my-0 w-100">
+            <form action="/search/{% url 'core:search_results' %}" method="get" class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2 w-100" type="text" placeholder="Buscar" aria-label="Search" name="q">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
           </form>
-        </div>
-              <!--Navbar-->
+          
+          </div>
+        </form>
+      </div>
+      <!--Navbar-->
       <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5 mx-auto">
         <!-- Navbar brand -->
         <span class="navbar-brand">Categorias:</span>
@@ -60,43 +64,43 @@
 
       </nav>
       <!--/.Navbar-->
-      </div>
-      
-
-
-
-      <!-- Links -->
-      <div class="collapse navbar-collapse" id="navbarSupportedContent" style="justify-content: right; flex-grow:0">
-
-        <!-- Right -->
-        <ul class="navbar-nav nav-flex-icons ">
-          {% if request.user.is_authenticated %}
-          <li class="nav-item">
-            <a href="{% url 'core:order-summary' %}" class="nav-link waves-effect">
-              <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span>
-              <i class="fas fa-shopping-cart"></i>
-              <span class="clearfix d-none d-sm-inline-block"> Carrito </span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
-              <span class="clearfix d-none d-sm-inline-block"> Cerrar sesión </span>
-            </a>
-          </li>
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'account_login' %}">
-              <span class="clearfix d-none d-sm-inline-block"> Iniciar Sesion </span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link waves-effect" href="{% url 'account_signup' %}">
-              <span class="clearfix d-none d-sm-inline-block"> Registrarse </span>
-            </a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
     </div>
-  </nav>
+
+
+
+
+    <!-- Links -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="justify-content: right; flex-grow:0">
+
+      <!-- Right -->
+      <ul class="navbar-nav nav-flex-icons ">
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a href="{% url 'core:order-summary' %}" class="nav-link waves-effect">
+            <span class="badge red z-depth-1 mr-1"> {{ request.user|cart_item_count }} </span>
+            <i class="fas fa-shopping-cart"></i>
+            <span class="clearfix d-none d-sm-inline-block"> Carrito </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'account_logout' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Cerrar sesión </span>
+          </a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'account_login' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Iniciar Sesion </span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link waves-effect" href="{% url 'account_signup' %}">
+            <span class="clearfix d-none d-sm-inline-block"> Registrarse </span>
+          </a>
+        </li>
+        {% endif %}
+      </ul>
+    </div>
+
+  </div>
+</nav>
