--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
           <div class="md-form my-0 w-100">
             <form action="/search/{% url 'core:search_results' %}" method="get" class="form-inline my-2 my-lg-0">
               <input class="form-control mr-sm-2 w-100" type="text" placeholder="Buscar" aria-label="Search" name="q">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+              <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button> -->
           </form>
           
           </div>
