--- a/templates/home.html
+++ b/templates/home.html
@@ -1,96 +1,96 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <main>
-    <div class="container">
+<main>
+  <div class="container">
 
-      <!--Section: Products v.3-->
-      <section class="text-center mb-4">
+    <!--Section: Products v.3-->
+    <section class="text-center mb-4">
 
-        <div class="row wow fadeIn">
+      <div class="row wow fadeIn">
 
-          {% for item in object_list %}
-          <div class="col-lg-3 col-md-6 mb-4">
+        {% for item in object_list %}
+        <div class="col-lg-3 col-md-6 mb-4">
 
-            <div class="card">
+          <div class="card">
 
-              <div class="view overlay">
-                {% comment %} <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top" {% endcomment %}
-                <img src="{{ item.image.url }}" class="card-img-top">
-                <a href="{{ item.get_absolute_url }}">
-                  <div class="mask rgba-white-slight"></div>
-                </a>
-              </div>
+            <div class="view overlay">
+              {% comment %} <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg"
+                class="card-img-top" {% endcomment %} <img src="{{ item.image.url }}" class="card-img-top">
+              <a href="{{ item.get_absolute_url }}">
+                <div class="mask rgba-white-slight"></div>
+              </a>
+            </div>
 
-              <div class="card-body text-center">
-                <a href="" class="grey-text">
-                  <h5>{{ item.get_category_display }}</h5>
-                </a>
-                <h5>
-                  <strong>
-                    <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
-                      <span class="badge badge-pill {{ item.get_label_display }}-color">NUEVO</span>
-                    </a>
-                  </strong>
-                </h5>
+            <div class="card-body text-center">
+              <a href="" class="grey-text">
+                <h5>{{ item.get_category_display }}</h5>
+              </a>
+              <h5>
+                <strong>
+                  <a href="{{ item.get_absolute_url }}" class="dark-grey-text">{{ item.title }}
+                    <span class="badge badge-pill {{ item.get_label_display }}-color">NUEVO</span>
+                  </a>
+                </strong>
+              </h5>
 
-                <h4 class="font-weight-bold blue-text">
-                  <strong>$
+              <h4 class="font-weight-bold blue-text">
+                <strong>$
                   {% if item.discount_price %}
                   {{ item.discount_price }}
                   {% else %}
                   {{ item.price }}
                   {% endif %}
-                  </strong>
-                </h4>
-
-              </div>
+                </strong>
+              </h4>
 
             </div>
 
           </div>
-          {% endfor %}
+
         </div>
+        {% empty %}
+        <p>No se encontraron resultados para tu búsqueda</p>
+        {% endfor %}
+      </div>
 
-      </section>
-      <!--Section: Products v.3-->
+    </section>
+    <!--Section: Products v.3-->
 
-      <!--Pagination-->
+    <!--Pagination-->
 
-      {% if is_paginated %}
-      <nav class="d-flex justify-content-center wow fadeIn">
-        <ul class="pagination pg-blue">
+    {% if is_paginated %}
+    <nav class="d-flex justify-content-center wow fadeIn">
+      <ul class="pagination pg-blue">
 
-          {% if page_obj.has_previous %}
-          <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previo</span>
-            </a>
-          </li>
-          {% endif %}
+        {% if page_obj.has_previous %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previo</span>
+          </a>
+        </li>
+        {% endif %}
 
-          <li class="page-item active">
-            <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}
-              <span class="sr-only">(actual)</span>
-            </a>
-          </li>
+        <li class="page-item active">
+          <a class="page-link" href="?page={{ page_obj.number }}">{{ page_obj.number }}
+            <span class="sr-only">(actual)</span>
+          </a>
+        </li>
 
-          {% if page_obj.has_next %}
-          <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Próximo</span>
-            </a>
-          </li>
-          {% endif %}
-        </ul>
-      </nav>
-      {% endif %}
+        {% if page_obj.has_next %}
+        <li class="page-item">
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Próximo</span>
+          </a>
+        </li>
+        {% endif %}
+      </ul>
+    </nav>
+    {% endif %}
 
-    </div>
-  </main>
+  </div>
+</main>
 
 {% endblock content %}
-
-
